--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^4.0.3"
+    "styled-components": "^4.0.3",
+    "styled-theming": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
