--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.7.0",
     "eslint-plugin-prettier": "^3.0.0",
     "prettier": "1.15.1"
   }
